-- Canteen Management System business-domain schema
-- Target dialect: PostgreSQL
-- Generated from the Django apps accounts, inventory, orders, and payments.
-- Django framework tables such as django_session, auth_group, django_admin_log,
-- django_migrations, and auth_permission are intentionally omitted.

BEGIN;

CREATE TABLE accounts_customuser (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    password VARCHAR(128) NOT NULL,
    last_login TIMESTAMPTZ NULL,
    is_superuser BOOLEAN NOT NULL DEFAULT FALSE,
    username VARCHAR(150) NOT NULL,
    first_name VARCHAR(150) NOT NULL DEFAULT '',
    last_name VARCHAR(150) NOT NULL DEFAULT '',
    email VARCHAR(254) NOT NULL DEFAULT '',
    is_staff BOOLEAN NOT NULL DEFAULT FALSE,
    is_active BOOLEAN NOT NULL DEFAULT TRUE,
    date_joined TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    user_code VARCHAR(5) NOT NULL,
    role VARCHAR(20) NOT NULL,
    CONSTRAINT accounts_customuser_username_key UNIQUE (username),
    CONSTRAINT accounts_customuser_user_code_key UNIQUE (user_code),
    CONSTRAINT accounts_customuser_valid_role CHECK (role IN ('admin', 'student', 'teacher')),
    CONSTRAINT accounts_customuser_user_code_format CHECK (user_code ~ '^[0-9]{5}$')
);

CREATE TABLE inventory_inventory (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    item_name VARCHAR(100) NOT NULL,
    category VARCHAR(50) NOT NULL,
    price NUMERIC(6,2) NOT NULL,
    quantity BIGINT NOT NULL,
    food_image VARCHAR(100) NULL,
    is_available BOOLEAN NOT NULL DEFAULT TRUE,
    CONSTRAINT inventory_inventory_category_check CHECK (
        category IN ('main_course', 'snacks', 'beverages', 'desserts', 'other')
    ),
    CONSTRAINT inventory_inventory_price_nonnegative CHECK (price >= 0),
    CONSTRAINT inventory_inventory_quantity_nonnegative CHECK (quantity >= 0),
    CONSTRAINT inventory_inventory_item_name_not_blank CHECK (btrim(item_name) <> '')
);

CREATE TABLE orders_order (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL,
    order_date TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    total_amount NUMERIC(8,2) NOT NULL,
    is_paid BOOLEAN NOT NULL DEFAULT FALSE,
    CONSTRAINT orders_order_total_amount_nonnegative CHECK (total_amount >= 0),
    CONSTRAINT orders_order_user_fk FOREIGN KEY (user_id)
        REFERENCES accounts_customuser (id)
        ON DELETE CASCADE
);

CREATE TABLE orders_orderitem (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_id BIGINT NOT NULL,
    item_id BIGINT NOT NULL,
    quantity INTEGER NOT NULL,
    price_at_purchase NUMERIC(6,2) NOT NULL,
    CONSTRAINT orders_orderitem_quantity_positive CHECK (quantity >= 1),
    CONSTRAINT orders_orderitem_price_nonnegative CHECK (price_at_purchase >= 0),
    CONSTRAINT orders_orderitem_order_fk FOREIGN KEY (order_id)
        REFERENCES orders_order (id)
        ON DELETE CASCADE,
    CONSTRAINT orders_orderitem_item_fk FOREIGN KEY (item_id)
        REFERENCES inventory_inventory (id)
        ON DELETE CASCADE
);

CREATE TABLE payments_payment (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_id BIGINT NOT NULL,
    payment_method VARCHAR(10) NOT NULL DEFAULT 'CASH',
    amount_paid NUMERIC(8,2) NOT NULL,
    payment_time TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT payments_payment_order_key UNIQUE (order_id),
    CONSTRAINT payments_payment_method_not_blank CHECK (btrim(payment_method) <> ''),
    CONSTRAINT payments_payment_amount_nonnegative CHECK (amount_paid >= 0),
    CONSTRAINT payments_payment_order_fk FOREIGN KEY (order_id)
        REFERENCES orders_order (id)
        ON DELETE CASCADE
);

CREATE TABLE payments_receipt (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_id BIGINT NOT NULL,
    generated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT payments_receipt_order_key UNIQUE (order_id),
    CONSTRAINT payments_receipt_order_fk FOREIGN KEY (order_id)
        REFERENCES orders_order (id)
        ON DELETE CASCADE
);

CREATE INDEX orders_order_user_id_idx ON orders_order (user_id);
CREATE INDEX orders_orderitem_order_id_idx ON orders_orderitem (order_id);
CREATE INDEX orders_orderitem_item_id_idx ON orders_orderitem (item_id);

COMMENT ON TABLE accounts_customuser IS 'Business users of the canteen system, including admins, students, and teachers.';
COMMENT ON COLUMN accounts_customuser.id IS 'Primary key for the custom user record.';
COMMENT ON COLUMN accounts_customuser.password IS 'Django password hash stored for authentication.';
COMMENT ON COLUMN accounts_customuser.last_login IS 'Most recent successful login timestamp.';
COMMENT ON COLUMN accounts_customuser.is_superuser IS 'True when the account has unrestricted administrative privileges.';
COMMENT ON COLUMN accounts_customuser.username IS 'Unique login username.';
COMMENT ON COLUMN accounts_customuser.first_name IS 'Given name captured for the account.';
COMMENT ON COLUMN accounts_customuser.last_name IS 'Family name captured for the account.';
COMMENT ON COLUMN accounts_customuser.email IS 'Email address for the account.';
COMMENT ON COLUMN accounts_customuser.is_staff IS 'True when the account can access admin functionality.';
COMMENT ON COLUMN accounts_customuser.is_active IS 'False when the account is disabled without deletion.';
COMMENT ON COLUMN accounts_customuser.date_joined IS 'Timestamp when the account was created.';
COMMENT ON COLUMN accounts_customuser.user_code IS 'Unique five-digit campus/user identifier.';
COMMENT ON COLUMN accounts_customuser.role IS 'Business role: admin, student, or teacher.';

COMMENT ON TABLE inventory_inventory IS 'Menu items managed by the canteen, including stock and pricing.';
COMMENT ON COLUMN inventory_inventory.id IS 'Primary key for a menu item.';
COMMENT ON COLUMN inventory_inventory.item_name IS 'Display name of the menu item.';
COMMENT ON COLUMN inventory_inventory.category IS 'Business category assigned to the item.';
COMMENT ON COLUMN inventory_inventory.price IS 'Current selling price of the item.';
COMMENT ON COLUMN inventory_inventory.quantity IS 'Current stock quantity available in inventory.';
COMMENT ON COLUMN inventory_inventory.food_image IS 'Optional stored path to the uploaded item image.';
COMMENT ON COLUMN inventory_inventory.is_available IS 'Whether the item is currently available for ordering.';

COMMENT ON TABLE orders_order IS 'Customer purchase header storing the user, date, amount, and payment state.';
COMMENT ON COLUMN orders_order.id IS 'Primary key for an order.';
COMMENT ON COLUMN orders_order.user_id IS 'User who placed the order.';
COMMENT ON COLUMN orders_order.order_date IS 'Timestamp when checkout created the order.';
COMMENT ON COLUMN orders_order.total_amount IS 'Computed total amount for the full order.';
COMMENT ON COLUMN orders_order.is_paid IS 'True once payment and receipt creation are completed.';

COMMENT ON TABLE orders_orderitem IS 'Line items that resolve the many-to-many relationship between orders and inventory items.';
COMMENT ON COLUMN orders_orderitem.id IS 'Primary key for an order line.';
COMMENT ON COLUMN orders_orderitem.order_id IS 'Parent order containing this line item.';
COMMENT ON COLUMN orders_orderitem.item_id IS 'Inventory item purchased on this line.';
COMMENT ON COLUMN orders_orderitem.quantity IS 'Quantity purchased for the selected inventory item.';
COMMENT ON COLUMN orders_orderitem.price_at_purchase IS 'Snapshot of the item price at checkout time.';

COMMENT ON TABLE payments_payment IS 'One-to-one payment record linked to a paid order.';
COMMENT ON COLUMN payments_payment.id IS 'Primary key for a payment record.';
COMMENT ON COLUMN payments_payment.order_id IS 'Order that this payment settles.';
COMMENT ON COLUMN payments_payment.payment_method IS 'Payment method label captured at checkout.';
COMMENT ON COLUMN payments_payment.amount_paid IS 'Amount paid for the related order.';
COMMENT ON COLUMN payments_payment.payment_time IS 'Timestamp when the payment record was created.';

COMMENT ON TABLE payments_receipt IS 'One-to-one receipt metadata generated for a paid order.';
COMMENT ON COLUMN payments_receipt.id IS 'Primary key for a receipt record.';
COMMENT ON COLUMN payments_receipt.order_id IS 'Order for which the receipt was generated.';
COMMENT ON COLUMN payments_receipt.generated_at IS 'Timestamp when the receipt record was created.';

COMMIT;
